# ansible-role-golang

./: .ansible-lint  .gitignore  .yamllint  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
defaults/: main.yml
docs/: ubuntu-dev-environment.md
meta/: main.yml
molecule/default/: binary_install.yml  binary_install_with_checksum.yml  binary_install_with_go_env_vars.yml  binary_install_with_goroot_versioned.yml  converge.yml  molecule.yml  package_install_with_go_env_vars.yml
molecule/force_update/: converge.yml  molecule.yml  verify.yml
tasks/: binary_install.yml  install-Debian.yml  main.yml  package_install.yml  set_env_vars.yml
templates/: gopath.sh.j2
vars/: Debian.yml
